--- a/SampleCalcService.DAL/SampleCalcService.DAL.csproj
+++ b/SampleCalcService.DAL/SampleCalcService.DAL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B254AAE0-0267-49F0-AE0B-5BBD748E5CD0}</ProjectGuid>
+    <ProjectGuid>{C3EF7366-001E-44CD-82D6-D40650D21BDA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SampleCalcService.Entities</RootNamespace>
-    <AssemblyName>SampleCalcService.Entities</AssemblyName>
+    <RootNamespace>SampleCalcService.DAL</RootNamespace>
+    <AssemblyName>SampleCalcService.DAL</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,9 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enum\CalcEnum.cs" />
-    <Compile Include="Maths.cs" />
+    <Compile Include="Interface\ICalcRepository.cs" />
+    <Compile Include="Repository\CalcRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SampleCalcService.Entities\SampleCalcService.Entities.csproj">
+      <Project>{b254aae0-0267-49f0-ae0b-5bbd748e5cd0}</Project>
+      <Name>SampleCalcService.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
