--- a/SampleCalcService/SampleCalcService.csproj
+++ b/SampleCalcService/SampleCalcService.csproj
@@ -251,6 +251,10 @@
       <Project>{24a04dc2-cd7f-47a3-b5c7-03d5efa7aab5}</Project>
       <Name>SampleCalcService.Business</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SampleCalcService.DAL\SampleCalcService.DAL.csproj">
+      <Project>{c3ef7366-001e-44cd-82d6-d40650d21bda}</Project>
+      <Name>SampleCalcService.DAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SampleCalcService.Entities\SampleCalcService.Entities.csproj">
       <Project>{b254aae0-0267-49f0-ae0b-5bbd748e5cd0}</Project>
       <Name>SampleCalcService.Entities</Name>
